--- a/src/Cell.css
+++ b/src/Cell.css
@@ -1,9 +1,21 @@
 .Cell {
   height: 100px;
   width: 100px;
-  background-color: darkgray;
+  background-image: url('./0.jpeg');
+  background-size: cover;
+  transform: scale(1); /* 1/10 of the original size */
+  transition: all 1s ease-in-out;
 }
 
 .Cell-lit {
-  background-color: white;
+  height: 100px;
+  width: 100px;
+  background-image: url('./0 (1).jpeg');
+  background-size: cover;
+  transform: scale(1); /* 1/10 of the original size */
+  transition: all 1s ease-in-out;
+}
+
+.Cell.opened {
+  transform: scale(1);
 }
