--- a/src/Board.css
+++ b/src/Board.css
@@ -1,3 +1,11 @@
 .Board {
   margin: 0 auto;
 }
+table{
+  display:flex;
+  justify-content: center;
+}
+h1{
+  text-align: center;
+  color:white;
+}
