--- a/src/Cell.css
+++ b/src/Cell.css
@@ -1,16 +1,16 @@
 .Cell {
   height: 100px;
   width: 100px;
-  background-image: url('./0.jpeg');
   background-size: cover;
   transform: scale(1); /* 1/10 of the original size */
   transition: all 1s ease-in-out;
+  background-color: gray;
 }
 
 .Cell-lit {
   height: 100px;
   width: 100px;
-  background-image: url('./0 (1).jpeg');
+  background-color: white;
   background-size: cover;
   transform: scale(1); /* 1/10 of the original size */
   transition: all 1s ease-in-out;
